--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "borisbutenko <iamborisbutenko@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "parcel ./src/index.html -p 8000 --no-cache",
+    "start": "parcel ./src/index.html -p 8000",
     "watch": "parcel watch ./src/index.html",
     "build": "parcel build ./src/index.html"
   },
